tests/ui/errors/use_directive.stderr
error[E0308]: mismatched types
  --> tests/ui/errors/use_directive.rs:10:17
   |
10 |         div use:arg_dir;
   |             --- ^^^^^^^ expected `i32`, found `()`
   |             |
   |             arguments to this method are incorrect
   |
note: method defined here
  --> $CARGO/leptos_dom-0.5.2/src/html.rs
   |
   |     pub fn directive<T: ?Sized, P: Clone + 'static>(
   |            ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/errors/use_directive.rs:16:29
   |
16 |         span use:no_arg_dir=2;
   |              ---            ^ expected `()`, found integer
   |              |
   |              arguments to this method are incorrect
   |
note: method defined here
  --> $CARGO/leptos_dom-0.5.2/src/html.rs
   |
   |     pub fn directive<T: ?Sized, P: Clone + 'static>(
   |            ^^^^^^^^^
